# bsb002-system_feeds_packages

admin/monit/: Makefile
devel/perf/: Makefile
lang/angular/: Makefile
lang/angular-mocks/: Makefile
lang/angular-route/: Makefile
lang/angular-translate/: Makefile
lang/bootstrap/: Makefile
lang/jquery-contextmenu/: Makefile
lang/jquery-flot-axislabels/: Makefile
lang/jquery-flot-gant/: Makefile
lang/jquery-ui/: Makefile
lang/urijs/: Makefile
lang/vala/: Makefile
libs/boost/: Makefile
libs/cyrus-sasl/: Makefile
libs/elfutils/: Makefile
libs/faad2/: Config.in  Makefile
libs/fcgi/: Makefile
libs/fdk-aac/: Makefile
libs/gdbm/: Makefile
libs/jansson/: Makefile
libs/libdaemon/: Makefile
libs/libffi/: Makefile
libs/libgee/: Makefile
libs/libgpg-error/: Makefile
libs/libmad/: Makefile
libs/libnl-bf/: Makefile
libs/libogg/: Makefile
libs/libusb/: Makefile
libs/libvorbisidec/: Makefile
libs/libyaml/: Makefile
libs/lzo/: Makefile
libs/opencore-amr/: Makefile
libs/pcre/: Makefile
multimedia/ffmpeg/: Makefile
multimedia/ffmpeg-old/: Makefile
multimedia/gmediarender/: Makefile
multimedia/gssdp/: Makefile
multimedia/gst-plugins-bad/: Makefile
multimedia/gst-plugins-good/: Makefile
multimedia/gupnp/: Makefile
multimedia/gupnp-av/: Makefile
multimedia/mpg123/: Makefile
multimedia/mplayer/: Makefile
multimedia/rygel/: Makefile
multimedia/rygel/base-files/src/plugins/orb/: Makefile.am  rygel-orb-player.c  rygel-orb-player.h  rygel-orb-player.vapi  rygel-orb-plugin.c  rygel-orb-plugin.vala
(+98 files in other folders)
